@@ -1,3 +1,7 @@
+2017-02-07  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* libs/tcpd/libcouriertls.c: OpenSSL API update.
+
 4.17.3
 
 2016-09-20  "Hanno Böck" <hanno@hboeck.de>
